优化日志
