# api-docs/openapi/v3_0/pluginFriendsApi.json
@@ -546,217 +546,6 @@
         },
         "tags" : [ "FriendPostV1alpha1" ]
       }
-    },
-    "/apis/friend.moony.la/v1alpha1/syncfriendposts" : {
-      "get" : {
-        "description" : "List SyncFriendPost",
-        "operationId" : "listSyncFriendPost",
-        "parameters" : [ {
-          "description" : "Page number. Default is 0.",
-          "in" : "query",
-          "name" : "page",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
-          "description" : "Size number. Default is 0.",
-          "in" : "query",
-          "name" : "size",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
-          "description" : "Label selector. e.g.: hidden!=true",
-          "in" : "query",
-          "name" : "labelSelector",
-          "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
-          }
-        }, {
-          "description" : "Field selector. e.g.: metadata.name==halo",
-          "in" : "query",
-          "name" : "fieldSelector",
-          "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
-          }
-        }, {
-          "description" : "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.",
-          "in" : "query",
-          "name" : "sort",
-          "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/SyncFriendPostList"
-                }
-              }
-            },
-            "description" : "Response syncfriendposts"
-          }
-        },
-        "tags" : [ "SyncFriendPostV1alpha1" ]
-      },
-      "post" : {
-        "description" : "Create SyncFriendPost",
-        "operationId" : "createSyncFriendPost",
-        "requestBody" : {
-          "content" : {
-            "*/*" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/SyncFriendPost"
-              }
-            }
-          },
-          "description" : "Fresh syncfriendpost"
-        },
-        "responses" : {
-          "200" : {
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/SyncFriendPost"
-                }
-              }
-            },
-            "description" : "Response syncfriendposts created just now"
-          }
-        },
-        "tags" : [ "SyncFriendPostV1alpha1" ]
-      }
-    },
-    "/apis/friend.moony.la/v1alpha1/syncfriendposts/{name}" : {
-      "delete" : {
-        "description" : "Delete SyncFriendPost",
-        "operationId" : "deleteSyncFriendPost",
-        "parameters" : [ {
-          "description" : "Name of syncfriendpost",
-          "in" : "path",
-          "name" : "name",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Response syncfriendpost deleted just now"
-          }
-        },
-        "tags" : [ "SyncFriendPostV1alpha1" ]
-      },
-      "get" : {
-        "description" : "Get SyncFriendPost",
-        "operationId" : "getSyncFriendPost",
-        "parameters" : [ {
-          "description" : "Name of syncfriendpost",
-          "in" : "path",
-          "name" : "name",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/SyncFriendPost"
-                }
-              }
-            },
-            "description" : "Response single syncfriendpost"
-          }
-        },
-        "tags" : [ "SyncFriendPostV1alpha1" ]
-      },
-      "patch" : {
-        "description" : "Patch SyncFriendPost",
-        "operationId" : "patchSyncFriendPost",
-        "parameters" : [ {
-          "description" : "Name of syncfriendpost",
-          "in" : "path",
-          "name" : "name",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "requestBody" : {
-          "content" : {
-            "application/json-patch+json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/JsonPatch"
-              }
-            }
-          }
-        },
-        "responses" : {
-          "200" : {
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/SyncFriendPost"
-                }
-              }
-            },
-            "description" : "Response syncfriendpost patched just now"
-          }
-        },
-        "tags" : [ "SyncFriendPostV1alpha1" ]
-      },
-      "put" : {
-        "description" : "Update SyncFriendPost",
-        "operationId" : "updateSyncFriendPost",
-        "parameters" : [ {
-          "description" : "Name of syncfriendpost",
-          "in" : "path",
-          "name" : "name",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "requestBody" : {
-          "content" : {
-            "*/*" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/SyncFriendPost"
-              }
-            }
-          },
-          "description" : "Updated syncfriendpost"
-        },
-        "responses" : {
-          "200" : {
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/SyncFriendPost"
-                }
-              }
-            },
-            "description" : "Response syncfriendposts updated just now"
-          }
-        },
-        "tags" : [ "SyncFriendPostV1alpha1" ]
-      }
     }
   },
   "components" : {
